# Flux-Team-8

./: .gitignore  .pre-commit-config.yaml  CLAUDE-CODE-PROMPT-MERGE.md  CURSOR-PROMPT-POST-MERGE-FE.md  GETTING_STARTED.md  README.md  conv_agent_README.md  docker-compose.yml  download_articles.py  flux-claude.md  package-lock.json  pyrightconfig.json  rag-articles-list.md  seed-local.sh  setup.sh
backend/: .env.example  (+24 more)
flux-backend/: .env.example  README.md  docker-compose.yml  pyproject.toml
flux-backend/app/: config.py
flux-backend/app/agents/: classifier.py  goal_modifier.py  goal_planner.py  graph.py  onboarding.py  orchestrator.py  pattern_observer.py  save_tasks.py  scheduler.py  state.py  task_handler.py
flux-backend/app/agents/prompts/: goal_planner.txt  orchestrator.txt  pattern_observer.txt  scheduler.txt
flux-backend/app/api/v1/: account.py  analytics.py  chat.py  echoconfig.py  goals.py  patterns.py  tasks.py  webhooks.py
flux-backend/app/middleware/: auth.py  logging.py  rate_limit.py
flux-backend/app/models/: agent_outputs.py  api_schemas.py
flux-backend/app/services/: llm.py  push_service.py  supabase.py
flux-backend/docker/: Dockerfile.api
flux-backend/docs/: TASKS.md  flux-tsd.md
flux-backend/migrations/: 001_initial_schema.sql  001_schema.sql  002_indexes.sql  003_materialized_views.sql  004_rls_policies.sql  005_triggers.sql
flux-backend/notifier/: recovery.py
flux-backend/tests/integration/: test_gdpr_delete.py  test_twilio_webhook.py
flux-backend/tests/unit/: test_classifier.py  test_goal_planner.py  test_orchestrator.py
(+532 files in other folders)
