[project]
name = "flux-backend"
version = "1.0.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=0.1.0",
    "litellm>=1.40.0",
    "langsmith>=0.1.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "supabase>=2.0.0",
    "asyncpg>=0.29.0",
    "apscheduler>=3.10.0",
    "sqlalchemy>=2.0.0",          # Required by APScheduler's PostgreSQL job store
    "psycopg2-binary>=2.9.0",     # Required by APScheduler's SQLAlchemyJobStore with PostgreSQL
    "twilio>=9.0.0",
    "pywebpush>=2.0.0",
    "slowapi>=0.1.9",
    "pendulum>=3.0.0",
    "python-dateutil>=2.9.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "PyJWT[cryptography]>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
